---
source: brush-parser/src/parser.rs
expression: "ParseResult { input, result: &seq }"
---
ParseResult(
  input: "echo |& wc",
  result: [
    Simple(SimpleCommand(
      word_or_name: Some(Word(
        value: "echo",
        loc: Some(TokenLocation(
          start: SourcePosition(
            index: 0,
            line: 1,
            column: 1,
          ),
          end: SourcePosition(
            index: 4,
            line: 1,
            column: 5,
          ),
        )),
      )),
      suffix: Some(CommandSuffix([
        IoRedirect(File(Some(2), DuplicateOutput, Fd(1))),
      ])),
    )),
    Simple(SimpleCommand(
      word_or_name: Some(Word(
        value: "wc",
        loc: Some(TokenLocation(
          start: SourcePosition(
            index: 8,
            line: 1,
            column: 9,
          ),
          end: SourcePosition(
            index: 10,
            line: 1,
            column: 11,
          ),
        )),
      )),
    )),
  ],
)
